[package]
name = "touched"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
default = []
derive = ["dep:touched-derive"]

[dependencies]
touched-derive = { workspace = true, optional = true }
impl-trait-for-tuples = "0.2"
